<resources>
    <string name="app_name">Z-Uni</string>
    <string name="bottom_nav_institutions">Institutions</string>
    <string name="bottom_nav_courses">Courses</string>
    <string name="bottom_nav_students">Students</string>
    <string name="entity_name">Entity Name</string>
    <string name="value_1">Value 1</string>
    <string name="value_2">Value 2</string>
    <string name="edit">Edit</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="add_institution">Add Institution</string>
    <string name="add_course">Add Course</string>
    <string name="add_student">Add Student</string>
    <string name="institution_name">Institution Name</string>
    <string name="add_institution_title">Add Institution</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_course_title">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="course_id">Course Id</string>
    <string name="add_student_title">Add Student</string>
    <string name="student_name">Student Name</string>
    <string name="institution_id">Institution Id</string>
    <string name="edit_institution_title">Edit Institution</string>
    <string name="new_institution_name">New Institution Name</string>
    <string name="edit_course_title">Edit Course</string>
    <string name="new_course_name">New Course Name</string>
    <string name="new_student_name">New Student Name</string>
    <string name="edit_student_title">Edit Student</string>
    <string name="student_id">Student Id</string>
    <string name="delete_institution">Delete Institution</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_student">Delete Student</string>
    <string name="change_course">Change Course</string>
    <string name="accept">Accept</string>
    <string name="new_course_id">New Course Id</string>
    <string name="change_institution">Change Institution</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="confirm_deletion">Confirm Deletion?</string>
    <string name="institution">Institution:</string>
    <string name="search">Search</string>
    <string name="change_school">Change School</string>
    <string name="institution_2">Institution:</string>
    <string name="course">Course</string>
    <string name="filter_by_course">Filter By Course</string>
    <string name="filter_by_institution">Filter By Institution</string>
    <string name="add_a_course">Add A Course</string>
    <string name="add_a_student">Add A Student</string>
</resources>