<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/entity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entity_name"
        android:textSize="40sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/given_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_1"
            android:layout_weight="1"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/given_value2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_2"
            android:layout_weight="1"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>