<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/change_course"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

<!--        <EditText-->
<!--            android:id="@+id/student_name_course_change"-->
<!--            android:layout_width="242dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:hint="@string/student_name"-->
<!--            android:importantForAutofill="no"-->
<!--            android:inputType="number"-->
<!--            android:minHeight="48dp" />-->

        <EditText
            android:id="@+id/course_name_course_change"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/new_course_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/design_default_color_primary">

            <Button
                android:id="@+id/accept_change_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>