<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/add_institution_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:importantForAutofill="no"
            android:hint="@string/institution_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/design_default_color_primary">

            <Button
                android:id="@+id/add_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="300dp"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_gravity="center">-->
<!--<LinearLayout-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="vertical"-->
<!--    android:gravity="center_horizontal">-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/add_institution_title"-->
<!--        android:background="@color/design_default_color_primary"-->
<!--        android:textColor="@color/white"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="30sp"/>-->

<!--    <EditText-->
<!--        android:id="@+id/editText"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:text="@string/institution_name"-->
<!--        android:autofillHints="" />-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->
<!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/add"-->
<!--            style="?android:attr/buttonBarButtonStyle" />-->

<!--        <Button-->
<!--            android:id="@+id/button2"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/cancel"-->
<!--            style="?android:attr/buttonBarButtonStyle" />-->

<!--    </LinearLayout>-->

<!--</LinearLayout>-->

<!--</RelativeLayout>-->