<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_marginTop="10dp">

    <androidx.cardview.widget.CardView
        android:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintTop_toTopOf="@id/constraint_layout"
        app:layout_constraintStart_toStartOf="@+id/constraint_layout"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/drop_down"
                android:paddingTop="20dp"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <LinearLayout
                android:id="@+id/firstLinear"
                android:backgroundTint="@color/design_default_color_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/expandableLinear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/entity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entity_name"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandableLinear"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:foregroundTint="@color/design_default_color_primary_dark"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:backgroundTint="@color/design_default_color_primary_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstLinear">

                <Button
                    android:id="@+id/edit_button"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/add_button"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/delete_button"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>